--- a/client/css/main.css
+++ b/client/css/main.css
@@ -6588,10 +6588,18 @@ svg {
   position: absolute;
   right: 240px;
   bottom: 76px;
-  width: 166px;
+  width: 200px;
+  text-align: right;
+}
+.pdf_vntop_scroll #pdf_vntop .pdf_vntop-content-temp h4 {
+  font-weight: bold;
+  color: #213444;
+  margin-bottom: -6px;
+  font-size: 13px;
+  padding-right: 10px;
 }
 .pdf_vntop_scroll #pdf_vntop .pdf_vntop-content-temp img {
-  width: 100%;
+  width: 152px;
   height: auto;
 }
 .pdf_vntop_scroll #box-img-out {
