--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1047,6 +1047,9 @@ svg {
 			}
 			.pdf_vntop-text {
 				padding-top: 16px;
+				p {
+					margin-bottom: 6px;
+				}
 			}
 		}
 		.pdf_vntop-content-temp {
