--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -1104,6 +1104,7 @@ svg {
 	justify-content: space-between;
 	text-align: right;
 	span {
+		color: #a1a4ae;
 		&.success {
 			color: #2ca746;
 		}
