--- a/client/css/layouts/dashbroad.scss
+++ b/client/css/layouts/dashbroad.scss
@@ -444,12 +444,12 @@
                 justify-content: space-between;
 
                 .left {
-                  font-size: rem(16);
+                  font-size: rem(15);
                   display: flex;
                   flex-direction: column;
 
                   .exchange {
-                    margin-top: 5px;
+                    margin: 0 0 6px;
                     font-size: rem(16);
                     font-weight: 600;
                     color: $c1;
@@ -465,7 +465,7 @@
                 }
 
                 .right {
-                  font-size: rem(16);
+                  font-size: rem(15);
                 }
               }
 
