--- a/landingpage/css/main.css
+++ b/landingpage/css/main.css
@@ -956,6 +956,16 @@ p {
 html {
   font-size: 18px;
 }
+@media (max-width: 1600.98px) {
+  html {
+    font-size: 16px;
+  }
+}
+@media (max-width: 1200.98px) {
+  html {
+    font-size: 14px;
+  }
+}
 
 #header-top {
   height: 100px;
@@ -970,6 +980,30 @@ html {
   font-size: 22px;
   color: #055ba9;
   font-weight: bold;
+}
+@media (max-width: 1600.98px) {
+  #header-top {
+    height: 70px;
+    line-height: 70px;
+  }
+  #header-top img {
+    height: 64px;
+  }
+  #header-top p {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1200.98px) {
+  #header-top {
+    height: 60px;
+    line-height: 60px;
+  }
+  #header-top img {
+    height: 52px;
+  }
+  #header-top p {
+    font-size: 18px;
+  }
 }
 
 .hero-sc img {
@@ -1000,6 +1034,22 @@ html {
   font-weight: bold;
   color: #055ba9;
   margin-bottom: 20px;
+}
+@media (max-width: 1600.98px) {
+  .group-title h3, #advise .advise-group .advise-item .advise-title h3, #commit .commit-group .commit-item .commit-title h3, #newspaper .newspaper-title h3, #product .product-steps .product-steps-title h3, #product .product-title .product-title-title h3, #reason .reason-title h3, #partner .partner-title h3, #problem .problem-2 .problem-2__text .problem-2__text-title h3, #problem .problem-1 .problem-1__text .problem-1__text-title h3 {
+    font-size: 36px;
+  }
+  .group-title h1, #advise .advise-group .advise-item .advise-title h1, #commit .commit-group .commit-item .commit-title h1, #newspaper .newspaper-title h1, #product .product-steps .product-steps-title h1, #product .product-title .product-title-title h1, #reason .reason-title h1, #partner .partner-title h1, #problem .problem-2 .problem-2__text .problem-2__text-title h1, #problem .problem-1 .problem-1__text .problem-1__text-title h1 {
+    font-size: 36px;
+  }
+}
+@media (max-width: 1200.98px) {
+  .group-title h3, #advise .advise-group .advise-item .advise-title h3, #commit .commit-group .commit-item .commit-title h3, #newspaper .newspaper-title h3, #product .product-steps .product-steps-title h3, #product .product-title .product-title-title h3, #reason .reason-title h3, #partner .partner-title h3, #problem .problem-2 .problem-2__text .problem-2__text-title h3, #problem .problem-1 .problem-1__text .problem-1__text-title h3 {
+    font-size: 28px;
+  }
+  .group-title h1, #advise .advise-group .advise-item .advise-title h1, #commit .commit-group .commit-item .commit-title h1, #newspaper .newspaper-title h1, #product .product-steps .product-steps-title h1, #product .product-title .product-title-title h1, #reason .reason-title h1, #partner .partner-title h1, #problem .problem-2 .problem-2__text .problem-2__text-title h1, #problem .problem-1 .problem-1__text .problem-1__text-title h1 {
+    font-size: 28px;
+  }
 }
 
 #problem {
@@ -1062,15 +1112,64 @@ html {
   width: 50%;
 }
 #problem .problem-2 .problem-2__text .problem-2__text-content {
-  text-align: justify;
+  text-align: center;
   padding: 0 20px;
+}
+@media (max-width: 1200.98px) {
+  #problem .problem-1 .problem-1__img img {
+    width: 60%;
+  }
+  #problem .problem-1 .problem-1__text .problem-1__text-content div {
+    font-size: 14px;
+  }
+  #problem .problem-2 .problem-2__img img {
+    width: 50%;
+  }
+  #problem .problem-2 .problem-2__text .problem-2__text-content {
+    font-size: 14px;
+  }
+}
+@media (max-width: 992.98px) {
+  #problem {
+    padding: 32px 0;
+  }
+  #problem .problem-1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #problem .problem-1 .problem-1__img {
+    margin-bottom: 20px;
+  }
+  #problem .problem-1 .problem-1__text {
+    width: 80%;
+  }
+  #problem .problem-1 .problem-1__text .problem-1__text-content div {
+    font-size: 14px;
+  }
+  #problem .problem-2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  #problem .problem-2 .problem-2__img {
+    margin-bottom: 20px;
+  }
+  #problem .problem-2 .problem-2__text {
+    width: 80%;
+  }
 }
 
 #partner {
   position: relative;
   background: #e9f7fb;
   margin: 70px 0;
-  padding: 32px 0 20px;
+  padding: 32px 0 12px;
+}
+#partner .partner-title {
+  margin-bottom: 40px;
 }
 #partner .partner-list .partner-item {
   text-align: center;
@@ -1079,6 +1178,28 @@ html {
 }
 #partner .partner-list .partner-item img {
   margin-bottom: 20px;
+}
+@media (max-width: 1600.98px) {
+  #partner {
+    margin: 40px 0;
+    padding: 60px 0;
+  }
+}
+@media (max-width: 1200.98px) {
+  #partner {
+    padding: 40px 0 0px;
+    margin: 16px 0;
+    font-size: 14px;
+  }
+  #partner .partner-list .partner-item img {
+    width: 40%;
+    margin-bottom: 16px;
+  }
+}
+@media (max-width: 992.98px) {
+  #partner {
+    padding: 20px 0 0;
+  }
 }
 #partner::before {
   content: "";
@@ -1091,6 +1212,22 @@ html {
   background-position: top;
   background-size: contain;
 }
+@media (max-width: 1600.98px) {
+  #partner::before {
+    top: -110px;
+  }
+}
+@media (max-width: 1200.98px) {
+  #partner::before {
+    height: 100px;
+    top: -80px;
+  }
+}
+@media (max-width: 992.98px) {
+  #partner::before {
+    top: -68px;
+  }
+}
 #partner::after {
   content: "";
   position: absolute;
@@ -1101,6 +1238,17 @@ html {
   background: url(../imgs/bg-lai-suat-duoi.png) no-repeat;
   background-position: bottom;
   background-size: contain;
+}
+@media (max-width: 1600.98px) {
+  #partner::after {
+    bottom: -50px;
+  }
+}
+@media (max-width: 1200.98px) {
+  #partner::after {
+    bottom: -20px;
+    height: 100px;
+  }
 }
 
 #reason {
@@ -1124,9 +1272,40 @@ html {
 #reason .reason-list .reason-item img {
   margin-right: 12px;
 }
+@media (max-width: 1200.98px) {
+  #reason {
+    font-size: 14px;
+    padding: 32px 0 60px;
+  }
+  #reason .reason-list .reason-item {
+    margin-bottom: 16px;
+  }
+  #reason .reason-list .reason-item img {
+    width: 24px;
+  }
+}
+@media (max-width: 992.98px) {
+  #reason {
+    padding: 24px 0 40px;
+  }
+  #reason .reason-list {
+    padding-top: 0;
+  }
+  #reason .reason-list .reason-item:last-child {
+    margin-bottom: 0;
+  }
+  #reason .link-btn {
+    margin-top: 16px;
+  }
+}
 
 #product {
   padding: 60px 0 80px;
+}
+@media (max-width: 1200.98px) {
+  #product {
+    padding: 40px 0 52px;
+  }
 }
 #product .product-title {
   display: -webkit-box;
@@ -1142,6 +1321,18 @@ html {
 }
 #product .product-title .product-title-title {
   text-align: left;
+}
+@media (max-width: 1200.98px) {
+  #product .product-title {
+    font-size: 14px;
+  }
+  #product .product-title .product-item:last-child {
+    width: 30%;
+  }
+  #product .product-title .product-item:last-child img {
+    width: 100%;
+    height: auto;
+  }
 }
 #product .product-steps .product-steps-title h3 {
   margin-bottom: 0;
@@ -1159,22 +1350,31 @@ html {
 #product .product-steps .product-steps-img img {
   width: 100%;
 }
+@media (max-width: 1200.98px) {
+  #product .product-steps {
+    font-size: 14px;
+  }
+  #product .product-steps .product-steps-title p {
+    margin-bottom: 24px;
+    font-size: 16px;
+  }
+}
 #product .product-table {
   background: #fff;
   border-radius: 42px;
-  padding: 40px 0 60px;
+  padding: 20px 0 60px;
 }
 #product .product-table .table tr th {
   text-align: center;
-  font-weight: 500;
+  font-weight: 600;
   border: none;
-  padding: 16px 12px;
+  padding: 20px 12px;
 }
 #product .product-table .table tr th:nth-child(1) {
   font-weight: bold;
 }
 #product .product-table .table tr th:nth-child(2) {
-  width: 24%;
+  width: 26%;
 }
 #product .product-table .table tr th:nth-child(3) {
   width: 20%;
@@ -1187,10 +1387,11 @@ html {
   padding: 16px 12px;
 }
 #product .product-table .table tr td:nth-child(1) {
-  width: 12%;
+  width: 10%;
   text-align: left;
   font-weight: bold;
   color: #055ba9;
+  padding-left: 0;
 }
 #product .product-table .table tr td:nth-child(5) {
   width: 20%;
@@ -1208,6 +1409,11 @@ html {
 #product .product-table .table tr:nth-child(2n) td:last-child {
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
+}
+@media (max-width: 1200.98px) {
+  #product .product-table {
+    font-size: 14px;
+  }
 }
 #product .product-table .table-mobile {
   width: 100%;
@@ -1237,6 +1443,14 @@ html {
 }
 #product .product-table .table-mobile .tr:nth-child(2n) div:last-child {
   background: #d6eaff;
+}
+@media (max-width: 992.98px) {
+  #product .product-table .table {
+    display: none;
+  }
+  #product .product-table .table-mobile {
+    display: block;
+  }
 }
 #product .product-table .product-table-note {
   text-align: center;
@@ -1292,6 +1506,20 @@ html {
 #newspaper .owl-carousel-newspaper .owl-nav .owl-next {
   margin-right: -30px;
 }
+@media (max-width: 1200.98px) {
+  #newspaper {
+    font-size: 14px;
+    padding: 40px 0;
+  }
+}
+@media (max-width: 992.98px) {
+  #newspaper .owl-carousel-newspaper .owl-nav .owl-prev {
+    margin-left: -16px;
+  }
+  #newspaper .owl-carousel-newspaper .owl-nav .owl-next {
+    margin-right: -16px;
+  }
+}
 
 .form-control {
   width: 100%;
@@ -1330,6 +1558,29 @@ html {
 #commit .commit-group .commit-item .commit-title {
   text-transform: uppercase;
   text-align: left;
+}
+@media (max-width: 992.98px) {
+  #commit {
+    padding: 40px 0;
+  }
+  #commit .commit-group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #commit .commit-group .commit-item:first-child {
+    width: 100%;
+  }
+  #commit .commit-group .commit-item:last-child {
+    width: 70%;
+  }
+  #commit .commit-group .commit-item:last-child img {
+    width: 100%;
+  }
+  #commit .commit-group .commit-item .commit-title {
+    text-align: center;
+  }
 }
 
 #advise {
@@ -1383,6 +1634,42 @@ html {
 #advise .advise-group .advise-item .advise-form .form-gr:last-child {
   margin-bottom: 0;
 }
+@media (max-width: 1200.98px) {
+  #advise {
+    padding-bottom: 40px;
+  }
+  #advise .advise-group {
+    font-size: 14px;
+  }
+}
+@media (max-width: 992.98px) {
+  #advise .advise-group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  #advise .advise-group .advise-item:first-child {
+    width: 60%;
+  }
+  #advise .advise-group .advise-item:last-child {
+    width: 100%;
+  }
+  #advise .advise-group .advise-item .advise-title {
+    text-align: center;
+  }
+  #advise .advise-group .advise-item .advise-title br {
+    display: none;
+  }
+  #advise .advise-group .advise-item .advise-img {
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+  #advise .advise-group .advise-item .advise-img img {
+    width: 60%;
+  }
+}
 
 #bloomberg {
   background: url(../imgs/bg-bomber.png) no-repeat;
@@ -1398,6 +1685,14 @@ html {
   text-align: center;
   color: #fff;
   padding: 24px 0;
+}
+@media (max-width: 1200.98px) {
+  #bloomberg {
+    font-size: 14px;
+  }
+  #bloomberg .bloomberg-img img {
+    width: 160px;
+  }
 }
 
 #footer {
@@ -1488,6 +1783,20 @@ html {
 #footer .footer_copyright {
   text-align: center;
   padding-top: 20px;
+}
+@media (max-width: 1200.98px) {
+  #footer {
+    font-size: 14px;
+  }
+}
+@media (max-width: 992.98px) {
+  #footer {
+    padding: 40px 0;
+  }
+  #footer .footer-box {
+    margin-right: 0;
+    padding-left: 0;
+  }
 }
 
 .back-to-top {
